# FakeImageKiller

./: .gitignore  .remote-sync.json  .travis.yml  CMakeCache.txt  CMakeLists.txt  FakeImageKiller  FakeImageKiller.cpp  LICENSE  Makefile  README.md  cmake_install.cmake
include/: mnist_parser.h  tempered_image_parser.h
src/: .main.cpp.swp  main.cpp  test.cpp
